# genix

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.text
.github/workflows/: cl.yml
src/genix/: cli.py  config.py  llm.py  resolver.py  shell.py
tests/: test_cli.py
